# sankey-cash

./: .gitignore  README.md  class_index.html  function_index.html  index.html  pyproject.toml  requirements.txt  setup.cfg  status.json  z_841b9eb6ad0f78ad___init___py.html  z_841b9eb6ad0f78ad_cli_py.html  z_841b9eb6ad0f78ad_data_row_py.html  z_841b9eb6ad0f78ad_diagram_py.html  z_841b9eb6ad0f78ad_io_py.html  z_841b9eb6ad0f78ad_labels_py.html  z_841b9eb6ad0f78ad_sankey_cash_py.html  z_841b9eb6ad0f78ad_settings_py.html  z_841b9eb6ad0f78ad_transactions_py.html  z_841b9eb6ad0f78ad_utils_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_app_settings_py.html  z_a44f0ac069e85531_test_classes_py.html  z_a44f0ac069e85531_test_cli_py.html  z_a44f0ac069e85531_test_data_loading_py.html  z_a44f0ac069e85531_test_data_row_py.html  z_a44f0ac069e85531_test_diagram_py.html  z_a44f0ac069e85531_test_helpers_py.html  z_a44f0ac069e85531_test_row_labels_py.html  z_a44f0ac069e85531_test_transactions_py.html
.github/workflows/: ci.yaml  test-ci.yaml
sample_data/: expenses.csv  labels.csv
src/: VERSION
src/sankey_cashflow/: __init__.py  cli.py  data_row.py  diagram.py  io.py  labels.py  sankey-cash.py  sankey_cash.py  settings.py  transactions.py  utils.py
tests/: conftest.py  test_app_settings.py  test_cli.py  test_data_loading.py  test_data_row.py  test_diagram.py  test_helpers.py  test_row_labels.py  test_sankey_cash.py  test_transactions.py
