[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "sankey_cashflow"
version = "0.0.1"
authors = [
  { name="Paul Marcontell", email="paul.marcontell@gmail.com" },
]
description = "Some classes for generating cashflow sankey diagrams"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
"Homepage" = "https://github.com/paulkm/sankey-cash"
"Bug Tracker" = "https://github.com/paulkm/sankey-cash/issues"
