[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "src/VERSION"}

[project]
name = "sankey-cash"
dynamic = ["version"]
authors = [
  { name="Paul Marcontell", email="paul.marcontell@gmail.com" },
]
description = "Some classes for generating cashflow sankey diagrams"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "pygsheets ~= 2.0",
    "pandas ~= 2.2.3",
    "plotly ~= 5.24.1",
    "numpy ~= 1.26.4",
    "networkx ~= 2.8.8",
    "matplotlib"
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/paulkm/sankey-cash"
"Bug Tracker" = "https://github.com/paulkm/sankey-cash/issues"
